fix: fix high contrast mode to components

--- a/packages/components/src/combobox/ComboBox.module.css
+++ b/packages/components/src/combobox/ComboBox.module.css
@@ -119,5 +119,10 @@
 
   &[data-focused='true'] {
     background: gray20;
+
+    @media (forced-colors: active) {
+      outline: 3px solid highlight;
+      outline-offset: -2px;
+    }
   }
 }
