--- a/packages/components/src/select/Select.module.css
+++ b/packages/components/src/select/Select.module.css
@@ -82,6 +82,11 @@
 
   &[data-focused='true'] {
     background: gray20;
+
+    @media (forced-colors: active) {
+      outline: 3px solid highlight;
+      outline-offset: -2px;
+    }
   }
 
   &[data-disabled='true'] {
